--- a/styles/base/base.scss
+++ b/styles/base/base.scss
@@ -1,14 +1,15 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-image: url('../assets/greengrad.png');
-  background-repeat: no-repeat;
-  background-size: cover;
   color: #CCC;
 }
 
 #app {
   position: absolute;
-  background-image: url('../assets/suits.png');
+  background: rgb(0,48,0);
+  background: -moz-linear-gradient(144deg, rgba(0,48,0,1) 0%, rgba(0,23,1,1) 100%);
+  background: -webkit-linear-gradient(144deg, rgba(0,48,0,1) 0%, rgba(0,23,1,1) 100%);
+  background: linear-gradient(144deg, rgba(0,48,0,1) 0%, rgba(0,23,1,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#003000",endColorstr="#001701",GradientType=1);
   top: 0;
   bottom: 0;
   left: 0;
